--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
 						During the race, the next checkpoint location where players will respawn is determined in below blueprint.
 						</p>
 						<div class="portfolio-item"><img class="img-fluid rounded mb-3" src="img/portfolio/junkhilldrifters/update.png" alt="Update checkpoint"></div>
-						Then, once eliminated racers detect that the checkpoint has been passed, they respawn back in.
+						Then, once eliminated racers detect that the checkpoint has been passed, they respawn back in the racetrack, using the stored spawn location that was determined earlier.
 						<div class="portfolio-item"><img class="img-fluid rounded mb-3" src="img/portfolio/junkhilldrifters/respawn.png" alt="Update checkpoint"></div>						
 					</div>
 				</div>
