Blurred red background and added image meta tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
+  <meta name="image" property="og:image" content="https://i.imgur.com/WDEtKqC.png" />
+
   <title>Antonio Ackalin - Portfolio</title>
   <link rel="icon" type="image/png" href="img/avatar1.png" />
   <!-- Custom fonts for this theme -->
