--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Showcasing of past projects">
+  <meta name="author" content="Antonio Ackalin">
 
+  
+  <meta name="title" property="og:title" content="Portfolio" />
+  <meta property="og:type" content="Website" />
   <meta name="image" property="og:image" content="https://i.imgur.com/WDEtKqC.png" />
 
   <title>Antonio Ackalin - Portfolio</title>
