--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Game Dev Programmer</p>
-
+      <p class="masthead-subheading font-weight-light mb-2">Game Dev Programmer</p>
+	  <a href="files/AntonioAckalinResume.pdf" target="_blank" class="btn btn-secondary btn-project-link">Resume</i></a>
     </div>
   </header>
 
@@ -181,10 +181,10 @@
 
   <!-- About Section -->
   <section class="page-section bg-primary text-white mb-0">
-    <div class="container" id="about">
+    <div class="container">
 
       <!-- About Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+      <h2 class="page-section-heading text-center text-uppercase text-white" id="about">About</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -332,7 +332,7 @@
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
-				  <a href="https://studiohotpot.itch.io/rim-ram-rum" target="_blank" class="btn btn-secondary btn-project-link">Available on itch.io</i></a>				  
+				  <a href="https://studiohotpot.itch.io/rim-ram-rum" target="_blank" class="btn btn-secondary btn-project-link">Available on itch.io</a>				  
                   <div class="divider-custom-line"></div>
                 </div>
 				<div class="text-secondary">
@@ -467,7 +467,7 @@
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
-				  <a href="https://fireshadows.itch.io/hammer-hermit" target="_blank" class="btn btn-secondary btn-project-link">Available on itch.io</a>
+				  <a href="https://fireshadows.itch.io/hammer-hermit" target="_blank" class="btn btn-secondary btn-project-link">Playable on itch.io</a>
                   <div class="divider-custom-line"></div>
                 </div>
 				<div class="text-secondary">
@@ -986,7 +986,7 @@
           </div>
         </div>
       </div>
-    </div>
+  </div>
 
   <!-- Portfolio Modal 6 -->
   <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-labelledby="portfolioModal6Label" aria-hidden="true">
