--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 					<p>
 					The GameManager class reads what behavior the monster is doing and uses that to change states in MusicManager accordingly. Once the monster successfully catches the player for instance, the GameManager tells the MusicManager to switch into the Grabbed state where it will in turn fade away all types of music sources.
 					</p>
-					<div class="project-section text-white mb-2"><h4 class="rounded bg-secondary-color project-header">Music manager requesting new states</h4>
+					<div class="project-section text-white mb-2"><h4 class="rounded bg-secondary-color project-header">Game manager requesting new states</h4>
 						<div class="project-content gist-embed">
 							<script src="https://gist.github.com/Fireshadows/1355cd418dbffc6a6d04fb339c6457cf.js"></script>
 						</div>
@@ -786,7 +786,7 @@
 				</div></div>
 				
 				<!-- Portfolio Modal - Header -->
-				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Level flip mechanic</h3>
+				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">World twirl mechanic</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
 					<div class="project-content">
 						<p>
