Work status and Contact info updated.

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <!-- Footer Location -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Status</h4>
-          <p class="lead mb-0">Programmer intern at <br>Thunderful Karlshamn</p>
+          <p class="lead mb-0">Game Programmer at <br><b><a href="https://www.linkedin.com/company/station-interactive/">The Station - A Thunderful Studio</a></b></p>
         </div>
 
         <!-- Footer Social Icons -->
@@ -286,10 +286,10 @@
           </a>
         </div>
 
-        <!-- Footer About E-Mail -->
+        <!-- Footer About Contact -->
         <div class="col-lg-4">
-          <h4 class="text-uppercase mb-4">E-Mail</h4>
-          <p class="lead mb-0">antonio.ackalin@futuregames.nu</p>
+          <h4 class="text-uppercase mb-4">Contact</h4>
+          <p class="lead mb-0">antonio.ackalin@gmail.com</p>
         </div>
 
       </div>
