--- a/index.html
+++ b/index.html
@@ -108,6 +108,40 @@
           </div>
         </div>
 
+      </div>
+      <!-- /.row -->
+
+    </div>
+	<div class="container">
+
+      <!-- Portfolio Section Heading -->
+      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Student Projects</h2>
+
+      <!-- Icon Divider -->
+      <div class="divider-custom">
+        <div class="divider-custom-line"></div>
+        <div class="divider-custom-icon">
+          <i class="fas fa-suitcase"></i>
+        </div>
+        <div class="divider-custom-line"></div>
+      </div>
+
+      <!-- Portfolio Grid Items -->
+      <div class="row">
+
+        <!-- Portfolio Item 1 -->
+        <div class="col-md-6 col-lg-4 mb-5">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white">
+				<img class="img-fluid" src="img/portfolio/rimramrum/logo.png" alt="RIM RAM RUM">
+                <!--<b class="text-uppercase fa-2x">RIM RAM RUM</b>-->
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/rimramrum/preview2.gif" alt="">
+          </div>
+        </div>
+
         <!-- Portfolio Item 2 -->
         <div class="col-md-6 col-lg-4 mb-5">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
