New entry to the portfolio - Steamworld Build.

--- a/index.html
+++ b/index.html
@@ -96,17 +96,18 @@
       <div class="row">
 
         <!-- Portfolio Item 1 -->
-        <div class="col-md-6 col-lg-4 mb-5">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+        <div class="col-md-12 col-lg-12 mb-5" onclick="myhref('https://www.youtube.com/watch?v=Enxq9uHyE0o');">
+          <div class="portfolio-item portfolio-main mx-auto" >
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-				<img class="img-fluid" src="img/portfolio/rimramrum/logo.png" alt="RIM RAM RUM">
-                <!--<b class="text-uppercase fa-2x">RIM RAM RUM</b>-->
+				<!--<img class="img-fluid" src="img/portfolio/rimramrum/logo.png" alt="RIM RAM RUM">-->
+                <b class="text-uppercase fa-2x">STEAMWORLD BUILD</b>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/rimramrum/preview2.gif" alt="">
+            <img class="img-fluid" src="img/portfolio/steamworldbuild/preview2.gif" alt="">
           </div>
         </div>
+		
 
       </div>
       <!-- /.row -->
@@ -131,7 +132,7 @@
 
         <!-- Portfolio Item 1 -->
         <div class="col-md-6 col-lg-4 mb-5">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+          <div class="portfolio-item portfolio-student mx-auto" data-toggle="modal" data-target="#portfolioModal1">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
 				<img class="img-fluid" src="img/portfolio/rimramrum/logo.png" alt="RIM RAM RUM">
@@ -144,7 +145,7 @@
 
         <!-- Portfolio Item 2 -->
         <div class="col-md-6 col-lg-4 mb-5">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
+          <div class="portfolio-item portfolio-student mx-auto" data-toggle="modal" data-target="#portfolioModal2">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
 				<img class="img-fluid" src="img/portfolio/hammerhermit/logo.png" alt="Hammer Hermit">
@@ -157,7 +158,7 @@
 
         <!-- Portfolio Item 3 -->
         <div class="col-md-6 col-lg-4 mb-5">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+          <div class="portfolio-item portfolio-student mx-auto" data-toggle="modal" data-target="#portfolioModal3">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
 				<img class="img-fluid" src="img/portfolio/transient/logo.png" alt="Transient">
@@ -170,7 +171,7 @@
 
         <!-- Portfolio Item 4 -->
         <div class="col-md-6 col-lg-4 mb-5">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+          <div class="portfolio-item portfolio-student mx-auto" data-toggle="modal" data-target="#portfolioModal4">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
 				<!--<img class="img-fluid" src="img/portfolio/junkhilldrifters/logo.png" alt="Ambiverse">-->
@@ -183,7 +184,7 @@
 
         <!-- Portfolio Item 5 -->
         <div class="col-md-6 col-lg-4 mb-5">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
+          <div class="portfolio-item portfolio-student mx-auto" data-toggle="modal" data-target="#portfolioModal5">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
 				<img class="img-fluid" src="img/portfolio/agraria/logo.png" alt="Agraria">
@@ -196,7 +197,7 @@
 
         <!-- Portfolio Item 6 -->
         <div class="col-md-6 col-lg-4 mb-5">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
+          <div class="portfolio-item portfolio-student portfolio-student mx-auto" data-toggle="modal" data-target="#portfolioModal6">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
 				<img class="img-fluid" src="img/portfolio/junkhilldrifters/logo.png" alt="Junkhill Drifters">
@@ -1206,6 +1207,10 @@
     }
 
   </script>
+  <script type="text/javascript">
+    function myhref(web){
+      window.location.href = web;}
+</script>
 
 </body>
 
