--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-suitcase"></i>
+          <i class="fas fa-graduation-cap"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -234,7 +234,7 @@
       <div class="about-intro rounded lead text-left mb-4">
 		<div><img class="img-about-me rounded" src="img/aboutme.png" alt="Picture of me!"></div>
 		
-		<p>Oh, <b>me</b>? I'm <b>Antonio Ackalin</b>!</p>
+		<p>Hello there! I'm <b>Antonio Ackalin</b>!</p>
 		<p>A creative and enthusiastic <b>game developer</b> who's been greatly interested in creating video game fun since forever!
 		Ever since creating my first game in 2014, I have acquainted myself with multiple fields within game dev to become a <b>capable</b> and <b>savvy developer</b>.
 		</p><p>
