Added logotype of Steamworld Build to its preview.

--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
           <div class="portfolio-item portfolio-main mx-auto" >
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-				<!--<img class="img-fluid" src="img/portfolio/rimramrum/logo.png" alt="RIM RAM RUM">-->
-                <b class="text-uppercase fa-2x">STEAMWORLD BUILD</b>
+				<img class="img-fluid" src="img/portfolio/steamworldbuild/logo_01.png" alt="RIM RAM RUM">
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/steamworldbuild/preview2.gif" alt="">
