--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         <!-- Footer Location -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Status</h4>
-          <p class="lead mb-0">Game Programmer at <br><b><a href="https://www.linkedin.com/company/station-interactive/">The Station - A Thunderful Studio</a></b></p>
+          <p class="lead mb-0">Looking for work!</b></p>
         </div>
 
         <!-- Footer Social Icons -->
