--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         <!-- Footer About Contact -->
         <div class="col-lg-4">
           <h4 class="text-uppercase mb-4">Contact</h4>
-          <p class="lead mb-0">antonio.ackalin@gmail.com</p>
+          <p class="lead mb-0">antonioh.ackalin@hotmail.com</p>
         </div>
 
       </div>
